Этап 2: Реализация ядра торговых операций

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# Пример .env для TradeWise
 TELEGRAM_TOKEN=7949262588:AAHxbYjhpo7gmpDsIn93Bx7caOeUSJqNI9M
-TINKOFF_TOKEN=t.KhS7ddvmI-hE-W2MMf8PNHF_0qsYKCO9XQT_j1MMtkPimTgGkcfMwUEZdX--tWwVwKyDqoSVYkIYcxOBcbySmg
+TINKOFF_SANDBOX_TOKEN=t.KhS7ddvmI-hE-W2MMf8PNHF_0qsYKCO9XQT_j1MMtkPimTgGkcfMwUEZdX--tWwVwKyDqoSVYkIYcxOBcbySmg
+TINKOFF_REAL_TOKEN=t.5sJ8vfUdccKth7lG52o2UrUXx3isuAPl-r4iYOeuSPWkQhzl7byW86f6WSTuyrVnXg38cTEXH_q_Er0zkb7vzw
 USE_SANDBOX=True
 PRIMARY_ACCOUNT_ID=6789324055
 DB_URL=sqlite+aiosqlite:///./tradewise.db
