--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-python-telegram-bot>=20.0
-SQLAlchemy>=2.0
-aiosqlite
-python-dotenv
-tinkoff-api
-pandas
-numpy
-matplotlib
-tabulate
-nest_asyncio
-redis>=4.3.4  # ИЛИ 2.25.1
-redis==4.5.5
+python-telegram-bot==20.7
+tinkoff-investments==0.2.0b114
+pandas==2.2.1
+numpy==1.26.4
+matplotlib==3.8.3
+tabulate==0.9.0
+python-dotenv==1.0.1
+redis==5.0.3
+sentry-sdk==1.45.0
+aiosqlite==0.20.0
